[#7] Develop WBEM Library
* Developed WBEM Library
* Updated License headers
* Updated the index.md
* Updated Sentry icon